package com.plcoding.cleanarchitecturenoteapp.constants

object ConstantsUtils {
    const val ORDER_SECTION_TAG = "OS_TAG"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
}